@@ -8,7 +8,9 @@ Version 1.3.0
   - The server crashed for the constructs like "<column> = ANY (NULL)".
     Report and patch by dreckard.
   - oracle_fdw sometimes failed to recognize the SDO_GEOMETRY data type.
-    Reported by Bevan Jenkins.
+    Per report from Bevan Jenkins.
+  - Some point geometries were not translated properly.
+    Per report from Bevan Jenkins.
 
 Version 1.2.0, released 2015-01-03
   Enhancements:
